--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="navbar">
-            <h1>This is a test!</h1>
+            <h1>I'm Gay!</h1>
         </div>
     </nav>
 </body>
