--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <nav>
+        <div class="navbar">
+        </div>
+    </nav>
 </body>
 <script src="src/script.js"></script>
 </html>
