--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
             <h1>I'm Gayerererer!</h1>
         </div>
     </nav>
+    <main>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </main>
+    <footer>
+    </footer>
 </body>
 <script src="src/script.js"></script>
 </html>
