--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
     </nav>
     <main>
-        <div></div>
+        <div class = "box1"></div>
         <div></div>
         <div></div>
         <div></div>
