--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Manager</title>
     <link rel="stylesheet" href="css/style.css">
+    
 </head>
 <body>
     <nav>
         <div class="navbar">
-            <h1>I'm Gayerererer!</h1>
+            <h1>Nice</h1>
         </div>
     </nav>
     <main>
