--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <nav>
         <div class="navbar">
-            <h1>Nice</h1>
+            <logo class="school">PiggidyHoe Idaho School</logo>
+            <p class="navData">Op1</p>
+            <p class="navData">Op2</p>
+            <p class="navData">Op3</p>
+            <p class="navData">Op4</p>
+            <div class="burger-icon"></div>
         </div>
     </nav>
     <main>
