--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <nav>
         <div class="navbar">
             <logo class="school">PiggidyHoe Idaho School</logo>
-            <p class="navData">Op1</p>
-            <p class="navData">Op2</p>
-            <p class="navData">Op3</p>
-            <p class="navData">Op4</p>
+            <p class="navData">School Calendar</p>
+            <p class="navData">Courses</p>
+            <p class="navData">About Us</p>
+            <p class="navData">LOGIN</p>
+            <p class="navData">SIGN UP</p>
             <div class="burger-icon"></div>
         </div>
     </nav>
