--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <nav>
+        <img src="TESTPIC1.jpg">
         <div class="navbar">
             <logo class="school">PiggidyHoe Idaho School</logo>
-            <p class="navData">School Calendar</p>
-            <p class="navData">Courses</p>
-            <p class="navData">About Us</p>
-            <p class="navData">LOGIN</p>
-            <p class="navData">SIGN UP</p>
+           <a href="#">School Calendar</a>
+           <a href="#">Courses</a>
+           <a href="#">About US</a>
+           <a href="#">LOGIN</a>
+           <a href="#">SIGN UP</a>
             <div class="burger-icon"></div>
         </div>
     </nav>
