--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Manager</title>
     <link rel="stylesheet" href="css/style.css">
-    
+
 </head>
+
 <body>
-    <nav>
-        <img src="TESTPIC1.jpg">
-        <div class="navbar">
-            <logo class="school">PiggidyHoe Idaho School</logo>
-           <a href="#">School Calendar</a>
-           <a href="#">Courses</a>
-           <a href="#">About US</a>
-           <a href="#">LOGIN</a>
-           <a href="#">SIGN UP</a>
-            <div class="burger-icon"></div>
-        </div>
-    </nav>
+    <header>
+        <nav class="navbar">
+            <h1 class="main_Name">STUDENT MANAGER</h1>
+            <h1><a href="" class="h_text">Home</a></h1>
+            <h1><a href="" class="h_text">User</a></h1>
+            <div>
+                <input type="search" name="" id="" placeholder="Search">
+            </div>
+        </nav>
+    </header>
     <main>
-        <div class = "box1"></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+            <img src="TESTPIC1.jpg" alt="">
+        </div>
     </main>
-    <footer>
+    <footer class="footer">
+        <h1 class="footer_text">Footer</h1>
+        <h1 class="footer_text"><a href="">Admin</a></h1>
     </footer>
 </body>
 <script src="src/script.js"></script>
+
 </html>
