--- a/index.html
+++ b/index.html
@@ -24,16 +24,10 @@
     </header>
     <main>
         <div>
-            <img src="TESTPIC1.jpg" alt="">
-        </div>
-        <div>
-            <img src="TESTPIC1.jpg" alt="">
+            <img class ="Landing_image" src="TESTPIC1.jpg" alt="bg pic">
         </div>
     </main>
     <footer class="footer">
-        <h1 class="footer_text">Footer</h1>
-        <h1 class="footer_text"><a href="">Admin</a></h1>
-    <footer>
         <h1 class="footer_text">Footer</h1>
         <h1 class="footer_text"><a href="">Admin</a></h1>
     </footer>
