--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1 class="main_Name">STUDENT MANAGER</h1>
-            <p><a href="#" class="h_text">Home</a></p>
-            <p><a href="#" class="h_text">User</a></p>   
-            <p><a href="#" class="h_text">Grades</a></p>
-            <p><a href="#" class="h_text">Data</a></p>
+            <h1 class="main-Name">STUDENT MANAGER</h1>
+            <p class="h_text"><a href="#">Home</a></p>
+            <p class="h_text"><a href="#">User</a></p>   
+            <p class="h_text"><a href="#">Grades</a></p>
+            <p class="h_text"><a href="#">Data</a></p>
             <div>
-                <input type="search" name="" id="" placeholder="Search">
+                <input class="search-bar" type="search" name="" id="" placeholder="Search">
             </div>
         </nav>
     </header>
