--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <header>
         <nav class="navbar">
             <h1 class="main-Name">STUDENT MANAGER</h1>
-            <p class="h_text"><a href="#">Home</a></p>
-            <p class="h_text"><a href="#">User</a></p>   
-            <p class="h_text"><a href="#">Grades</a></p>
-            <p class="h_text"><a href="#">Data</a></p>
+            <p class="h_text"><a class="h_link" href="#">Home</a></p>
+            <p class="h_text"><a class="h_link" href="#">User</a></p>   
+            <p class="h_text"><a class="h_link" href="#">Grades</a></p>
+            <p class="h_text"><a class="h_link" href="#">Data</a></p>
             <div>
                 <input class="search-bar" type="search" name="" id="" placeholder="Search">
             </div>
