--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <p class="h_text"><a class="h_link" href="#">User</a></p>   
             <p class="h_text"><a class="h_link" href="#">Grades</a></p>
             <p class="h_text"><a class="h_link" href="#">Data</a></p>
+            <p class="h_text"><a class="h_link" href="#admin">Contacts</a></p>
             <div>
                 <input class="search-bar" type="search" name="" id="" placeholder="Search">
             </div>
@@ -29,7 +30,7 @@
     </main>
     <footer class="footer">
         <h1 class="footer_text">Footer</h1>
-        <h1 class="footer_text"><a href="">Admin</a></h1>
+        <h1 id="admin" class="footer_text"><a href="">Admin</a></h1>
     </footer>
 </body>
 <script src="src/script.js"></script>
