Added navbar changes

--- a/index.html
+++ b/index.html
@@ -12,25 +12,31 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1 class="main-Name">STUDENT MANAGER</h1>
-            <p class="h_text"><a class="h_link" href="#">Home</a></p>
-            <p class="h_text"><a class="h_link" href="#">User</a></p>   
-            <p class="h_text"><a class="h_link" href="#">Grades</a></p>
-            <p class="h_text"><a class="h_link" href="#">Data</a></p>
-            <p class="h_text"><a class="h_link" href="#admin">Contacts</a></p>
-            <div>
-                <input class="search-bar" type="search" name="" id="" placeholder="Search">
+            <div class="logo">STUDENT MANAGER</div>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">User</a></li>
+                <li><a href="#">Grades</a></li>
+                <li><a href="#">Data</a></li>
+                <li><a href="#admin">Contacts</a></li>
+            </ul>
+            <div class="search-bar">
+                <input type="search" name="" id="" placeholder="Search">
             </div>
         </nav>
     </header>
     <main>
         <div>
-            <img class ="Landing_image" src="TESTPIC1.jpg" alt="bg pic">
+        <img class="background-image" src="maxresdefault.jpg">
         </div>
+        <h1>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam, sequi non tenetur consectetur quaerat corrupti odio voluptas 
+            fugit at. Itaque cumque veniam saepe. Ipsa architecto atque adipisci non mollitia cum.</h1>
+        <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam neque, amet corporis commodi omnis enim vero hic quidem, 
+            ad aliquid ipsa, iste ipsum dolore fugiat? At, magni hic! Quas, itaque?</h1>
     </main>
     <footer class="footer">
-        <h1 class="footer_text">Footer</h1>
-        <h1 id="admin" class="footer_text"><a href="">Admin</a></h1>
+        <h1 class="footer_text" id="Contacts">Contacts</h1>
+        <p id="admin" class="footer_text">Admin</p>
     </footer>
 </body>
 <script src="src/script.js"></script>
