--- a/log_in/index.html
+++ b/log_in/index.html
@@ -1,26 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Student Mana - Log In</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <style>
+        .mainRed {
+            background-color: rgb(126, 43, 43);
+        }
+
+        .hero-login {
+            background-color: #f8f9fa;
+            padding: 60px 0;
+        }
+
+        .card {
+            border: none;
+            border-radius: 1rem;
+        }
+
+        .form-control:focus {
+            box-shadow: none;
+            border-color: rgb(126, 43, 43);
+        }
+
+        .btn-mainRed {
+            background-color: rgb(126, 43, 43);
+            color: white;
+        }
+
+        .btn-mainRed:hover {
+            background-color: rgb(105, 36, 36);
+        }
+    </style>
 </head>
-<body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form action="#" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+
+<body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark mainRed">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Student Mana</a>
+        </div>
+    </nav>
+
+    <section class="hero-login">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-5">
+                    <div class="card shadow p-4">
+                        <h3 class="mb-4 text-center fw-bold">Welcome Back</h3>
+                        <form>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                            </div>
+                            <div class="mb-3 form-check">
+                                <input type="checkbox" class="form-check-input" id="rememberMe">
+                                <label class="form-check-label" for="rememberMe">Remember me</label>
+                            </div>
+                            <button type="submit" class="btn btn-mainRed w-100">Log In</button>
+                        </form>
+                        <p class="mt-3 text-center">Don't have an account? <a href="../sign_up/index.html" class="text-decoration-none">Sign up</a></p>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <button type="submit">Login</button>
-        </form>
-        <p>Don't have an account? <a href="#">Sign up</a></p>
-    </div>
+        </div>
+    </section>
+
+    <script src="../src/bootstrap.min.js"></script>
 </body>
+
 </html>
