--- a/sign_up/index.html
+++ b/sign_up/index.html
@@ -1,34 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Student Mana - Register</title>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <style>
+        .mainRed {
+            background-color: rgb(126, 43, 43);
+        }
+
+        .hero-register {
+            background-color: #f8f9fa;
+            padding: 60px 0;
+        }
+
+        .card {
+            border: none;
+            border-radius: 1rem;
+        }
+
+        .form-control:focus {
+            box-shadow: none;
+            border-color: rgb(126, 43, 43);
+        }
+
+        .btn-mainRed {
+            background-color: rgb(126, 43, 43);
+            color: white;
+        }
+
+        .btn-mainRed:hover {
+            background-color: rgb(105, 36, 36);
+        }
+    </style>
 </head>
-<body>
-    <div class="signup-container">
-        <h2>Sign Up</h2>
-        <form action="#" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+
+<body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark mainRed">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">Student Mana</a>
+        </div>
+    </nav>
+
+    <section class="hero-register">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-6 col-lg-5">
+                    <div class="card shadow p-4">
+                        <h3 class="mb-4 text-center fw-bold">Create Your Account</h3>
+                        <form>
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Full Name</label>
+                                <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Enter a password">
+                            </div>
+                            <div class="mb-3">
+                                <label for="confirmPassword" class="form-label">Confirm Password</label>
+                                <input type="password" class="form-control" id="confirmPassword" placeholder="Re-enter your password">
+                            </div>
+                            <button type="submit" class="btn btn-mainRed w-100">Sign Up</button>
+                        </form>
+                        <p class="mt-3 text-center">Already have an account? <a href="../log_in/index.html" class="text-decoration-none">Log in</a></p>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="form-group">
-                <label for="confirm-password">Confirm Password:</label>
-                <input type="password" id="confirm-password" name="confirm-password" required>
-            </div>
-            <button type="submit">Sign Up</button>
-        </form>
-        <p>Already have an account? <a href="login.html">Login</a></p>
-    </div>
+        </div>
+    </section>
+
+    <script src="../src/bootstrap.min.js"></script>
 </body>
+
 </html>
