--- a/sign_up/index.html
+++ b/sign_up/index.html
@@ -77,6 +77,7 @@
     </section>
 
     <script src="../src/bootstrap.min.js"></script>
+    <script src="../src/jquery-3.7.1.min.js"></script>
 </body>
 
 </html>
