Updated Things I dont wanna specify I'm tired

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="log_in/index.html" class="nav-link">Register</a>
+                            <a href="log_in/" class="nav-link">Register</a>
                         </li>
                     </ul>
 
@@ -74,7 +74,7 @@
         <div class="container hero-content">
           <h1 class="display-4 fw-bold">A Step Closer To Ease!</h1>
           <p class="lead">Manage Students Like You Never Did Before.</p>
-          <a href="log_in/index.html" class="btn mainRed btn-dark btn-lg mt-2">Get Started</a>
+          <a href="log_in/" class="btn mainRed btn-dark btn-lg mt-2">Get Started</a>
         </div>
       </section>
 
@@ -93,7 +93,7 @@
                           Everything at Student Mana is free! Worry No More About Fees And Manage Like Never Before!
                         </li>
                       </ul>
-                      <a href="log_in/index.html" class="btn btn-outline-light mainRed w-100">Choose Plan</a>
+                      <a href="log_in/" class="btn btn-outline-light mainRed w-100">Choose Plan</a>
                     </div>
                   </div>
                 </div>
