--- a/pages/userview/home/index.html
+++ b/pages/userview/home/index.html
@@ -59,22 +59,21 @@
   </head>
   
   <body class="bg-light">
-    <!-- Navbar -->
     <nav class="sidebar d-flex flex-column">
         <h3 class="mb-4">Student Mana</h3>
         <a href="#" class="nav-link active">Dashboard</a>
-        <a href="#" class="nav-link">My Classes</a>
-        <a href="#" class="nav-link">Subjects</a>
+        <a href="../classes/" class="nav-link">My Classes</a>
+        <a href="../subjects/" class="nav-link">Subjects</a>
         <a href="#" class="nav-link">Students</a>
         <a href="#" class="nav-link">Settings</a>
-        <a href="../../../log_in/index.html" class="nav-link mt-auto text-danger">Logout</a>
+        <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
       </nav>
   
   <main class="main-content">
     <div class="text-center">
-      <img src="pfp.webp" alt="Profile Picture" class="profile-pic"/>
+      <img src="../../../pics/pfp.webp" alt="Profile Picture" class="profile-pic"/>
       <div class="welcome-text">
-        <h1>Welcome Back, Teacher!</h1>
+        <h1>Welcome Back, Swifty!</h1>
       </div>
     </div>
   
