--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -65,10 +65,10 @@
   <nav class="sidebar d-flex flex-column">
     <h3 class="mb-4">Student Mana</h3>
     <a href="#" class="nav-link active">Dashboard</a>
-    <a href="#" class="nav-link">Instructors</a>
+    <a href="instructor/" class="nav-link">Instructors</a>
     <a href="#" class="nav-link">Classes</a>
-    <a href="#" class="nav-link">Requests</a>
-    <a href="../../log_in/index.html" class="nav-link mt-auto text-danger">Logout</a>
+    <a href="reports/" class="nav-link">Reports</a>
+    <a href="../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
   </nav>
 
   <main class="main-content">
@@ -76,7 +76,7 @@
       <div class="col-md-4">
         <div class="card shadow-sm text-center p-4">
           <h5>Total Instructors</h5>
-          <h2>235</h2>
+          <h2>3</h2>
         </div>
       </div>
       <div class="col-md-4">
@@ -87,14 +87,14 @@
       </div>
       <div class="col-md-4">
         <div class="card shadow-sm text-center p-4">
-          <h5>Pending Requests</h5>
-          <h2>7</h2>
+          <h5>Pending Reports</h5>
+          <h2>1</h2>
         </div>
       </div>
     </div>
 
     <div class="card shadow-sm p-4">
-      <h4 class="mb-4 text-center">Student Registration Trends</h4>
+      <h4 class="mb-4 text-center">Instructor Registration Trends</h4>
       <div class="chart-container">
         <canvas id="studentChart"></canvas>
       </div>
@@ -113,7 +113,7 @@
           labels: ['January', 'February', 'March', 'April', 'May', 'June'],
           datasets: [{
             label: 'New Instructors',
-            data: [12, 19, 3, 5, 8, 15],
+            data: [1, 0, 0, 1, 1, 0],
             borderColor: 'rgb(126, 43, 43)',
             backgroundColor: 'rgba(126, 43, 43, 0.2)',
             fill: true,
