--- a/sign_up/index.html
+++ b/sign_up/index.html
@@ -40,7 +40,7 @@
 <body class="bg-light">
     <nav class="navbar navbar-expand-lg navbar-dark mainRed">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">Student Mana</a>
+            <a class="navbar-brand" href="../">Student Mana</a>
         </div>
     </nav>
 
@@ -69,7 +69,7 @@
                             </div>
                             <button type="submit" class="btn btn-mainRed w-100">Sign Up</button>
                         </form>
-                        <p class="mt-3 text-center">Already have an account? <a href="../log_in/index.html" class="text-decoration-none">Log in</a></p>
+                        <p class="mt-3 text-center">Already have an account? <a href="../log_in/" class="text-decoration-none">Log in</a></p>
                     </div>
                 </div>
             </div>
