--- a/log_in/index.html
+++ b/log_in/index.html
@@ -86,6 +86,9 @@
         } else if(username === "swifty" && password === "Password") {
             window.location.href = "../pages/userview/home/index.html";
         }
+        else {
+          alert("Invalid Account");
+        }
       });
     });
   </script>
