--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -66,7 +66,7 @@
     <h3 class="mb-4">Student Mana</h3>
     <a href="#" class="nav-link active">Dashboard</a>
     <a href="instructor/" class="nav-link">Instructors</a>
-    <a href="#" class="nav-link">Classes</a>
+    <a href="classes/index.html" class="nav-link">Classes</a>
     <a href="reports/" class="nav-link">Reports</a>
     <a href="../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
   </nav>
