--- a/pages/admin/reports/index.html
+++ b/pages/admin/reports/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Mana - Admin Dashboard</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Student Mana - Reports</title>
   <link rel="stylesheet" href="../../../css/bootstrap.min.css" />
   <style>
     body {
@@ -39,39 +39,57 @@
       flex: 1;
     }
 
-    .card {
+    .report-card {
+      background-color: white;
       border-radius: 1rem;
+      padding: 1.5rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      margin-bottom: 1rem;
     }
 
-    .chart-container {
-  position: relative;
-  width: 100%;
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 1rem;
-}
+    .report-header {
+      font-weight: bold;
+      color: rgb(126, 43, 43);
+    }
 
-.chart-container canvas {
-  width: 100% !important;
-  height: 400px !important;
-}
+    .report-body {
+      margin-top: 0.5rem;
+    }
 
-
+    .status-badge {
+      font-size: 0.85rem;
+      padding: 0.2rem 0.6rem;
+      background-color: #ffc107;
+      border-radius: 0.375rem;
+      color: #212529;
+    }
   </style>
 </head>
 
 <body>
-
   <nav class="sidebar d-flex flex-column">
     <h3 class="mb-4">Student Mana</h3>
-    <a href="../index.html" class="nav-link">Dashboard</a>
+    <a href="../" class="nav-link">Dashboard</a>
     <a href="../instructor/" class="nav-link">Instructors</a>
-    <a href="../classes/" class="nav-link">Classes</a>
+    <a href="../classes/index.html" class="nav-link">Classes</a>
     <a href="#" class="nav-link active">Reports</a>
     <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
   </nav>
 
   <main class="main-content">
+    <h2 class="mb-4 text-center">User Reports</h2>
+
+    <div class="report-card">
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="report-header">Report #1 - Performance Issue</div>
+        <span class="status-badge">Pending</span>
+      </div>
+      <div class="report-body">
+        <p><strong>User:</strong> Swifty</p>
+        <p><strong>Description:</strong> The platform is laggy.</p>
+        <p><strong>Date Submitted:</strong> April 21, 2025</p>
+      </div>
+    </div>
   </main>
 
   <script src="../../src/jquery-3.7.1.min.js"></script>
