--- a/log_in/index.html
+++ b/log_in/index.html
@@ -63,7 +63,7 @@
             </form>
             <p class="mt-3 text-center">
               Don't have an account?
-              <a href="../sign_up/index.html" class="text-decoration-none">Sign up</a>
+              <a href="../sign_up/" class="text-decoration-none">Sign up</a>
             </p>
           </div>
         </div>
