--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     .hero {
       position: relative;
-      background-image: url("maxresdefault.jpg");
+      background-image: url("pics/library.webp");
       background-size: cover;
       background-position: center;
       height: 50vh;
