Updated Functionalities (Kinda)

--- a/pages/userview/home/Ransu.html
+++ b/pages/userview/home/Ransu.html
@@ -61,19 +61,19 @@
   <body class="bg-light">
     <nav class="sidebar d-flex flex-column">
         <h3 class="mb-4">Student Mana</h3>
-        <a href="../home/index.html" class="nav-link active">Dashboard</a>
+        <a href="#" class="nav-link active">Dashboard</a>
         <a href="../classes/index.html" class="nav-link">My Classes</a>
         <a href="../subjects/index.html" class="nav-link">Subjects</a>
-        <a href="../students/index.html" class="nav-link">Students</a>
+        <a href="../students/Ransu.html" class="nav-link">Students</a>
         <a href="../settings/settings.html" class="nav-link">Settings</a>
         <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
       </nav>
   
   <main class="main-content">
     <div class="text-center">
-      <img src="../../../pics/pfp.webp" alt="Profile Picture" class="profile-pic"/>
+      <img src="pfp2.webp" alt="Profile Picture" class="profile-pic"/>
       <div class="welcome-text">
-        <h1>Welcome Back, Swifty!</h1>
+        <h1>Welcome Back, Ransu!</h1>
       </div>
     </div>
   
@@ -125,9 +125,4 @@
     <script src="src/jquery-3.7.1.min.js"></script>
   </body>
   </html>
-    </main>
-  
-    <script src="src/bootstrap.min.js"></script>
-    <script src="src/jquery-3.7.1.min.js"></script>
-  </body>
-  </html>
+   
