--- a/log_in/index.html
+++ b/log_in/index.html
@@ -63,7 +63,7 @@
             </form>
             <p class="mt-3 text-center">
               Don't have an account?
-              <a href="../sign_up/" class="text-decoration-none">Sign up</a>
+              <a href="../sign_up/index.html" class="text-decoration-none">Sign up</a>
             </p>
           </div>
         </div>
@@ -85,9 +85,14 @@
           window.location.href = "../pages/admin/index.html";
         } else if(username === "swifty" && password === "Password") {
             window.location.href = "../pages/userview/home/index.html";
+        } else if(username === "Ransu" && password === "passcode") {
+          window.location.href = "../pages/userview/home/Ransu.html" 
+        } else if(username === "Ryuku" && password === "passcode1") {
+          window.location.href = "../pages/userview/home/Ryuku.html"
         }
+
         else {
-          alert("Invalid Account");
+          alert("Invalid Account. Try Again");
         }
       });
     });
