--- a/pages/userview/classes/RyukuClass.html
+++ b/pages/userview/classes/RyukuClass.html
@@ -64,9 +64,9 @@
   <body class="bg-light">
     <nav class="sidebar d-flex flex-column">
       <h3 class="mb-4">Student Mana</h3>
-      <a href="../home/" class="nav-link">Dashboard</a>
-      <a href="../classes/index.html" class="nav-link active">My Classes</a>
-      <a href="../subjects/" class="nav-link">Subjects</a>
+      <a href="../home/Ryuku.html" class="nav-link">Dashboard</a>
+      <a href="../classes/RyukuClass.html" class="nav-link active">My Classes</a>
+      <a href="../subjects" class="nav-link">Subjects</a>
       <a href="../students/index.html" class="nav-link">Students</a>
       <a href="../settings/settings.html" class="nav-link">Settings</a>
       <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
@@ -80,11 +80,11 @@
       <div class="card shadow-sm p-4 mt-5">
         <h4 class="fw-bold">Handled Sections</h4>
         <ul class="list-group">
-          <li class="list-group-item">Grade 10 - Platinum</li>
-          <li class="list-group-item">Grade 10 - Gold</li>
-          <li class="list-group-item">Grade 9 - Iron</li>
-          <li class="list-group-item">Grade 8 - Silver</li>
-          <li class="list-group-item">Grade 7 - Bronze</li>
+          <li class="list-group-item">Grade 7 - Bronze IV</li>
+          <li class="list-group-item">Grade 10 - Gold II</li>
+          <li class="list-group-item">Grade 10 - Gold III</li>
+          <li class="list-group-item">Grade 12 - Emerald III</li>
+          <li class="list-group-item">Grade 11 - Diamond II</li>
         </ul>
       </div>
   
