--- a/pages/userview/subjects/RansuSubjects.html
+++ b/pages/userview/subjects/RansuSubjects.html
@@ -49,10 +49,10 @@
 <body class="bg-light">
   <nav class="sidebar d-flex flex-column">
     <h3 class="mb-4">Student Mana</h3>
-    <a href="../home/index.html" class="nav-link">Dashboard</a>
-    <a href="../classes/index.html" class="nav-link">My Classes</a>
-    <a href="../subjects/index.html" class="nav-link active">Subjects</a>
-    <a href="../students/index.html" class="nav-link">Students</a>
+    <a href="../home/Ransu.html" class="nav-link">Dashboard</a>
+    <a href="../classes/RansuClass.html" class="nav-link">My Classes</a>
+    <a href="../subjects/RansuSubjects.html" class="nav-link active">Subjects</a>
+    <a href="../students/Ransu.html" class="nav-link">Students</a>
     <a href="../settings/settings.html" class="nav-link">Settings</a>
     <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
   </nav>
