--- a/sign_up/index.html
+++ b/sign_up/index.html
@@ -53,19 +53,19 @@
                         <form>
                             <div class="mb-3">
                                 <label for="name" class="form-label">Full Name</label>
-                                <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                                <input type="text" class="form-control" id="name" placeholder="Enter your name" required>
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="password" placeholder="Enter a password">
+                                <input type="password" class="form-control" id="password" placeholder="Enter a password" required>
                             </div>
                             <div class="mb-3">
                                 <label for="confirmPassword" class="form-label">Confirm Password</label>
-                                <input type="password" class="form-control" id="confirmPassword" placeholder="Re-enter your password">
+                                <input type="password" class="form-control" id="confirmPassword" placeholder="Re-enter your password" required>
                             </div>
                             <button type="submit" class="btn btn-mainRed w-100">Sign Up</button>
                         </form>
