Updated small bugs

--- a/pages/userview/subjects/RyukuSubjects.html
+++ b/pages/userview/subjects/RyukuSubjects.html
@@ -51,7 +51,7 @@
     <h3 class="mb-4">Student Mana</h3>
     <a href="../home/Ryuku.html" class="nav-link">Dashboard</a>
     <a href="../classes/RyukuClass.html" class="nav-link">My Classes</a>
-    <a href="../subjects/RansuSubjects.html" class="nav-link active">Subjects</a>
+    <a href="../subjects/RyukuSubjects.html" class="nav-link active">Subjects</a>
     <a href="../students/Ryuku.html" class="nav-link">Students</a>
     <a href="../settings/RyukuSettings.html" class="nav-link">Settings</a>
     <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
