--- a/pages/userview/home/Ryuku.html
+++ b/pages/userview/home/Ryuku.html
@@ -61,11 +61,11 @@
   <body class="bg-light">
     <nav class="sidebar d-flex flex-column">
         <h3 class="mb-4">Student Mana</h3>
-        <a href="#" class="nav-link active">Dashboard</a>
-        <a href="../classes/index.html" class="nav-link">My Classes</a>
-        <a href="../subjects/index.html" class="nav-link">Subjects</a>
+        <a href="../home/Ryuku.html" class="nav-link active">Dashboard</a>
+        <a href="../classes/RyukuClass.html" class="nav-link">My Classes</a>
+        <a href="../subjects/RyukuSubjects.html" class="nav-link">Subjects</a>
         <a href="../students/Ryuku.html" class="nav-link">Students</a>
-        <a href="../settings/settings.html" class="nav-link">Settings</a>
+        <a href="../settings/RyukuSettings.html" class="nav-link">Settings</a>
         <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
       </nav>
   
