Updated the link connectivities

--- a/pages/userview/classes/RansuClass.html
+++ b/pages/userview/classes/RansuClass.html
@@ -66,9 +66,9 @@
       <h3 class="mb-4">Student Mana</h3>
       <a href="../home/Ransu.html" class="nav-link">Dashboard</a>
       <a href="../classes/RansuClass.html" class="nav-link active">My Classes</a>
-      <a href="../subjects/index.html" class="nav-link">Subjects</a>
-      <a href="../students/index.html" class="nav-link">Students</a>
-      <a href="../settings/settings.html" class="nav-link">Settings</a>
+      <a href="../subjects/RansuSubjects.html" class="nav-link">Subjects</a>
+      <a href="../students/Ransu.html" class="nav-link">Students</a>
+      <a href="../settings/RansuSettings.html" class="nav-link">Settings</a>
       <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
     </nav>
   
