--- a/pages/userview/classes/RyukuClass.html
+++ b/pages/userview/classes/RyukuClass.html
@@ -66,9 +66,9 @@
       <h3 class="mb-4">Student Mana</h3>
       <a href="../home/Ryuku.html" class="nav-link">Dashboard</a>
       <a href="../classes/RyukuClass.html" class="nav-link active">My Classes</a>
-      <a href="../subjects" class="nav-link">Subjects</a>
-      <a href="../students/index.html" class="nav-link">Students</a>
-      <a href="../settings/settings.html" class="nav-link">Settings</a>
+      <a href="../subjects/RyukuSubjects.html" class="nav-link">Subjects</a>
+      <a href="../students/Ryuku.html" class="nav-link">Students</a>
+      <a href="../settings/RyukuSettings.html" class="nav-link">Settings</a>
       <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
     </nav>
   
