--- a/pages/userview/subjects/RansuSubjects.html
+++ b/pages/userview/subjects/RansuSubjects.html
@@ -53,7 +53,7 @@
     <a href="../classes/RansuClass.html" class="nav-link">My Classes</a>
     <a href="../subjects/RansuSubjects.html" class="nav-link active">Subjects</a>
     <a href="../students/Ransu.html" class="nav-link">Students</a>
-    <a href="../settings/settings.html" class="nav-link">Settings</a>
+    <a href="../settings/RansuSettings.html" class="nav-link">Settings</a>
     <a href="../../../log_in/" class="nav-link mt-auto text-danger">Logout</a>
   </nav>
 
