--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a href="log_in/" class="nav-link">Register</a>
+                            <a href="log_in/" class="nav-link">Login</a>
                         </li>
                     </ul>
 
