fixed colors on the buttons

--- a/pages/userview/students/Ransu.html
+++ b/pages/userview/students/Ransu.html
@@ -55,6 +55,14 @@
         .card {
           border-radius: 1rem;
         }
+
+        .school-badge {
+        background-color: rgb(126, 43, 43);
+        color: white;
+        border-radius: 0.375rem;
+        padding: 0.25rem 0.75rem;
+        font-size: 0.9rem;
+        }
       </style>
 </head>
 <body>
